@@ -1,115 +1,0 @@
-AUTHORS
-CHANGELOG
-COPYING
-HACKING
-onboard
-onboard-settings
-setup.py
-Onboard/Config.py
-Onboard/IconPalette.py
-Onboard/KbdWindow.py
-Onboard/KeyCommon.py
-Onboard/KeyGtk.py
-Onboard/Keyboard.py
-Onboard/KeyboardClutter.py
-Onboard/KeyboardGTK.py
-Onboard/KeyboardSVG.py
-Onboard/KeyboardVirtkey.py
-Onboard/OnboardGtk.py
-Onboard/Pane.py
-Onboard/__init__.py
-Onboard/settings-dialog.py
-Onboard/settings.py
-Onboard/utils.py
-data/onboard-settings.desktop
-data/onboard.desktop
-data/onboard.schemas
-data/onboard.svg
-data/onboard2.svg
-data/settings.glade
-data/settings.gladep
-docs/alpha.png
-docs/changeid.png
-docs/func.png
-docs/index.html
-docs/latched.png
-docs/layoutdialog.png
-docs/layouts.html
-docs/locked.png
-docs/macrodialog.png
-docs/macrokeys.png
-docs/onboard.png
-docs/personalise.png
-docs/scanningdialog.png
-docs/usage.html
-layouts/Default-Alpha.svg
-layouts/Default-Editing.svg
-layouts/Default-Functions.svg
-layouts/Default.sok
-layouts/scan-base.svg
-layouts/scan.sok
-layouts/template.svg
-po/onboard/fr.po
-po/onboard/onboard-ca.po
-po/onboard/onboard-cs.po
-po/onboard/onboard-da.po
-po/onboard/onboard-de.po
-po/onboard/onboard-el.po
-po/onboard/onboard-en_CA.po
-po/onboard/onboard-en_GB.po
-po/onboard/onboard-es.po
-po/onboard/onboard-et.po
-po/onboard/onboard-fil.po
-po/onboard/onboard-fr.po
-po/onboard/onboard-he.po
-po/onboard/onboard-hu.po
-po/onboard/onboard-id.po
-po/onboard/onboard-it.po
-po/onboard/onboard-nb.po
-po/onboard/onboard-nl.po
-po/onboard/onboard-oc.po
-po/onboard/onboard-pl.po
-po/onboard/onboard-pt.po
-po/onboard/onboard-pt_BR.po
-po/onboard/onboard-ru.po
-po/onboard/onboard-sl.po
-po/onboard/onboard-sr.po
-po/onboard/onboard-sv.po
-po/onboard/onboard-tl.po
-po/onboard/onboard-tr.po
-po/onboard/onboard-uk.po
-po/onboard/onboard-zh_CN.po
-po/onboard/onboard.pot
-po/onboard-settings/fr.po
-po/onboard-settings/onboard-settings-ca.po
-po/onboard-settings/onboard-settings-cs.po
-po/onboard-settings/onboard-settings-da.po
-po/onboard-settings/onboard-settings-de.po
-po/onboard-settings/onboard-settings-el.po
-po/onboard-settings/onboard-settings-en_GB.po
-po/onboard-settings/onboard-settings-es.po
-po/onboard-settings/onboard-settings-et.po
-po/onboard-settings/onboard-settings-fil.po
-po/onboard-settings/onboard-settings-fr.po
-po/onboard-settings/onboard-settings-he.po
-po/onboard-settings/onboard-settings-hu.po
-po/onboard-settings/onboard-settings-id.po
-po/onboard-settings/onboard-settings-it.po
-po/onboard-settings/onboard-settings-nb.po
-po/onboard-settings/onboard-settings-nl.po
-po/onboard-settings/onboard-settings-oc.po
-po/onboard-settings/onboard-settings-pl.po
-po/onboard-settings/onboard-settings-pt.po
-po/onboard-settings/onboard-settings-pt_BR.po
-po/onboard-settings/onboard-settings-ru.po
-po/onboard-settings/onboard-settings-sl.po
-po/onboard-settings/onboard-settings-sr.po
-po/onboard-settings/onboard-settings-sv.po
-po/onboard-settings/onboard-settings-tl.po
-po/onboard-settings/onboard-settings-tr.po
-po/onboard-settings/onboard-settings-uk.po
-po/onboard-settings/onboard-settings-zh_CN.po
-po/onboard-settings/onboard-settings.pot
-scripts/changekbd.sh
-scripts/sokSettings.py
-scripts/switchButtons.py
