@@ -1,9 +1,0 @@
-#!/usr/bin/make -f
-
-include /usr/share/cdbs/1/rules/debhelper.mk
-
-DEB_PYTHON_SYSTEM               := pycentral
-include /usr/share/cdbs/1/class/python-distutils.mk
-
-binary-install/onboard::
-	dh_gconf
