@@ -1,125 +1,0 @@
-onboard (0.91ubuntu3~ppa5) intrepid; urgency=low
-
-  * Use gconf schemas.
-  * Remember position of onboard for next start.
-
- -- Francesco Fumanti <francesco.fumanti@gmx.net>  Fri, 05 Dec 2008 12:58:30 +0100
-
-onboard (0.91ubuntu3~ppa4) intrepid; urgency=low
-
-  * Add gconf schemas and register/unregister keys
-
- -- Francesco Fumanti <francesco.fumanti@gmx.net>  Fri, 14 Nov 2008 12:58:30 +0100
-
-onboard (0.91ubuntu3~ppa3) intrepid; urgency=low
-
-  * Move .desktop files from debian folder to data folder.
-
- -- Francesco Fumanti <francesco.fumanti@gmx.net>  Sat, 08 Nov 2008 22:20:23 +0100
-
-onboard (0.91ubuntu3~ppa2) intrepid; urgency=low
-
-  * debian/control: Update Standards-Version and fix Build-Depends.
-
- -- Francesco Fumanti <francesco.fumanti@gmx.net>  Sat, 08 Nov 2008 17:06:15 +0100
-
-onboard (0.91ubuntu3~ppa1) intrepid; urgency=low
-
-  * debian/control: Update Homepage and Vcs-Bzr entries.
-
- -- Francesco Fumanti <francesco.fumanti@gmx.net>  Fri, 07 Nov 2008 20:40:22 +0100
-
-onboard (0.91ubuntu2~ppa1) intrepid; urgency=low
-
-  * Display menu items in the Universal Access menu.
-
- -- Francesco Fumanti <francesco.fumanti@gmx.net>  Thu, 06 Nov 2008 20:49:08 +0100
-
-onboard (0.91ubuntu2) hardy; urgency=low
-
-  * Do not display the onboard and onboard settings menu items.
-
- -- Luke Yelavich <luke.yelavich@canonical.com>  Tue, 04 Mar 2008 09:58:16 +1100
-
-onboard (0.91ubuntu1) hardy; urgency=low
-
-  * Onboard/OnboardGtk.py: Fix typo (Chris Jones). LP: #196772.
-
- -- Matthias Klose <doko@ubuntu.com>  Thu, 28 Feb 2008 23:18:47 +0000
-
-onboard (0.91) hardy; urgency=low
-
-  * New upstream version (Chris Jones).
-  * Onboard/utils.py: Fix typo.
-  * Remove dependency on python-xml.
-  * Remove backup files.
-  * debian/rules: Don't set DH_PYCENTRAL=nomove.
-
- -- Matthias Klose <doko@ubuntu.com>  Wed, 27 Feb 2008 21:07:35 +0000
-
-onboard (0.90) hardy; urgency=low
-
-  * Sync to latest bzr, as requested by upstream author.
-  * debian/control:
-    - Add homepage field.
-    - Add Vcs-Bzr field.
-    - Tightened dependency on python-virtkey.
-
- -- Luke Yelavich <luke.yelavich@canonical.com>  Tue, 19 Feb 2008 13:43:33 +1100
-
-onboard (0.87) gutsy; urgency=low
-
-  * debian/control: added python-glade2 to Depends. (LP: #109783)
-
- -- Daniel Holbach <daniel.holbach@ubuntu.com>  Mon, 18 Jun 2007 18:12:20 +0200
-
-onboard (0.86) feisty; urgency=low
-
-  * Sync from bzr as requested by upstream author. 
-
- -- Jani Monoses <jani@ubuntu.com>  Fri,  2 Mar 2007 12:43:10 +0200
-
-onboard (0.85) edgy; urgency=low
-
-  * Sync to r42 in bzr repo, fixes working without Nautilus
-
- -- Jani Monoses <jani@ubuntu.com>  Fri, 13 Oct 2006 15:58:53 +0300
-
-onboard (0.84) edgy; urgency=low
-
-  * debian/onboard.desktop:
-    - no menu item by default, fix the icon to use
-  * debian/onboard-settings.desktop:
-    - no menu item by default, fix the icon to use
-
- -- Sebastien Bacher <seb128@canonical.com>  Wed, 11 Oct 2006 16:00:37 +0200
-
-onboard (0.83) edgy; urgency=low
-
-  * Update to r40 from the bzr repo.  
-
- -- Tollef Fog Heen <tfheen@ubuntu.com>  Mon,  9 Oct 2006 13:38:39 +0200
-
-onboard (0.82) edgy; urgency=low
-
-  [Jani Monoses]
-    - debian/control: depend on python-gconf only instead of python-gnome2 
-    - Settings.py: fall back to Thunar if Nautilus is not available
-  
-  [Michael Bienia]
-    - debian/onboard.desktop, debian/onboard-settings.desktop: fix icon path
-    in desktop files (closes LP #64384)
-      
- -- Jani Monoses <jani@ubuntu.com>  Sat,  7 Oct 2006 10:33:49 +0300
-
-onboard (0.81) edgy; urgency=low
-
-  [Chris Jones]
-   - Rebrandinig
-   - rules and control fixes
-
-  [Daniel Holbach]
-   - packaging changes: simplify packaging, Python Policy changes, Policy
-     changes. 
-  
- -- Chris Jones <cej105@soton.ac.uk>  Tue, 18 Jul 2006 19:47:14 +0100
