@@ -1,3 +1,7 @@
+2009-07-25 Francesco Fumanti <francesco.fumanti@gmx.net>
+
+    Remove MANIFEST file and debian directory
+
 2009-03-27 Chris Jones <chris.e.jones@gmail.com>
 
     Derive label font size from the size of the key itself. Partially solves lp:348483.
